Prepare to upgrade to Java-15.